--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      <a class="item" href="#about">about</a>
                      <a class="item" href="#service">service</a>               
                      <a class="item" href="#gallery">gallery</a>                          
-                     <a class="item" id="item-contact" href="#contact">contact</a>                   
+                     <a class="item" id="item-contact" href="#">contact</a>                   
                   </div>
                </div> 
             </div>
@@ -192,7 +192,6 @@
                I accept the terms & conditions
             </label>
          </div>
-
          <button class="pop-button" type="submit" disabled="disabled">SEND</button>
       </f>
    </div>
