--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </label>
          </div>
          <button class="pop-button" type="submit" disabled="disabled">SEND</button>
-      </f>
+      </form>
    </div>
    <script src="./script.js"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
