--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
          <h2 class="text-uppercase"><span>our</span> services</h2>
          <div class="row four_services">
             <div class="col-lg-3 services">
-               <img class="services_image" src="img/Shape108.png" alt="heart">
+               <img class="services_image" src="./img/shape108.png" alt="heart">
                <p class="services_text">Making your trip <br /> beautiful and easier</p>
             </div>
             <div class="col-lg-3 services">
-               <img class="services_image" src="img/Shape127.png" alt="heart">
+               <img class="services_image" src="./img/shape127.png" alt="heart">
                <p class="services_text">Tools to help you succeed tommorow</p>
             </div>
             <div class="col-lg-3 services">
-               <img class="services_image" src="img/Shape106.png" alt="heart">
+               <img class="services_image" src="./img/shape106.png" alt="heart">
                <p class="services_text">Ideas that will blow you out the blue.</p>
             </div>
             <div class="col-lg-3 services">
