--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                      </div>
                   </div>   
                </div>
-               <a class="gallery-link" href="">VIEW MORE PICTURES</a>
+               <a class="gallery-link" href="#">VIEW MORE PICTURES</a>
             </div>
          </div>
       </div>
