--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
          <div class="row footer justify-content-between">
             <p class="col-md-7 col-sm-6 footer_text">All Rights Reserved |  2016  |  Designed with love by <span> DesignCoon</span></p>               
             <div class="col-md-4 col-sm-6 footer_logo">
-               <a href="#">automotive</a>
+               <span>automotive</span>
             </div>
          </div>
       </div>   
