--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                <p class="services_text">Ideas that will blow you out the blue.</p>
             </div>
             <div class="col-lg-3 services">
-               <img class="services_image" src="img/Shape97.png" alt="heart">
+               <img class="services_image" src="./img/shape97.png" alt="heart">
                <p class="services_text">Navigate your path to beautiful world.</p>
             </div>
          </div>
@@ -125,11 +125,11 @@
             <div class="col-lg-6 testimonial"> 
                <h2 class="text-uppercase">testimonial</h2>
                <div class="container quote">                             
-                  <p class="test-text"><img src="img/man.png" class="img-right img-round" alt="man">I have been involved with this comapny for ages and just want to say this is a great work by designcoon.</p>
+                  <p class="test-text"><img src="./img/man.png" class="img-right img-round" alt="man">I have been involved with this comapny for ages and just want to say this is a great work by designcoon.</p>
                   <p class="test-sign">DJ Bravo - Frequent Travelera</p>                          
                </div>
                <div class="container quote grey">                             
-                  <p class="test-text"><img src="img/boy.png" class="img-right img-round" alt="boy">I have been involved with this comapny for ages and just.</p> 
+                  <p class="test-text"><img src="./img/boy.png" class="img-right img-round" alt="boy">I have been involved with this comapny for ages and just.</p> 
                   <p class="test-sign">DJ Bravo - Frequent Travelera</p>     
                </div>
             </div>
@@ -138,22 +138,22 @@
                <div class="container gallery-img">     
                   <div class="row">
                      <div class=" col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/1.png" alt="">
+                        <img class="img-round" src="./img/1.png" alt="">
                      </div>
                      <div class="col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/2.png" alt="">
+                        <img class="img-round" src="./img/2.png" alt="">
                      </div>
                      <div class="col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/3.png" alt="">
+                        <img class="img-round" src="./img/3.png" alt="">
                      </div>
                      <div class=" col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/4.png" alt="">
+                        <img class="img-round" src="./img/4.png" alt="">
                      </div>
                      <div class="col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/5.png" alt="">
+                        <img class="img-round" src="./img/5.png" alt="">
                      </div>
                      <div class="col-md-4 col-sm-6 photo">
-                        <img class="img-round" src="img/6.png" alt="">
+                        <img class="img-round" src="./img/6.png" alt="">
                      </div>
                   </div>   
                </div>
