--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
    <link rel="stylesheet" href="style.css">
    <link rel="icon" href="./img/icon.png">
    <title>Automotive</title>
 </head>
+
 <body>
    <header>
-      <div class="container-fluid"  id="home">
+      <div class="container-fluid" id="home">
          <nav class="navbar navbar-expand-lg">
             <div class="container">
                <a class="navbar-brand text-uppercase brand" href="#">automotive</a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+                  aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarContent">
-                  <div class="navbar-nav ml-auto text-uppercase"> 
+                  <div class="navbar-nav ml-auto text-uppercase">
                      <a class="item active" href="#home">Home</a>
                      <a class="item" href="#about">about</a>
-                     <a class="item" href="#service">service</a>               
-                     <a class="item" href="#gallery">gallery</a>                          
-                     <a class="item" id="item-contact" href="#">contact</a>                   
+                     <a class="item" href="#service">service</a>
+                     <a class="item" href="#gallery">gallery</a>
+                     <a class="item" id="item-contact" href="#">contact</a>
                   </div>
-               </div> 
+               </div>
             </div>
-         </nav>    
+         </nav>
          <div class="header_content">
             <div class="container">
                <div class="row justify-content-between col-lg-8">
                   <h1>SELL YOUR <br> <span>CAR NOW</span></h1>
-                  <p class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-               </div> 
+                  <p class="title">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                     Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+               </div>
             </div>
-         </div>         
+         </div>
       </div>
    </header>
    <div class="our_services" id="service">
@@ -64,11 +70,12 @@
          </div>
       </div>
    </div>
-   <div class="our_story" id="about"> 
+   <div class="our_story" id="about">
       <div class="container-fluid">
          <div class="row justify-content-between">
             <div class="col-md-7 story_text">
-               <p class="text">We are in business for over 6 years providing amazing services to client and people love them to the core. View our story to know more.</p>
+               <p class="text">We are in business for over 6 years providing amazing services to client and people love
+                  them to the core. View our story to know more.</p>
             </div>
             <div class="col-md-4 story_button">
                <button type="button" class="btn text-uppercase button_text">our story</button>
@@ -76,7 +83,7 @@
          </div>
       </div>
    </div>
-   <div class="pricing"> 
+   <div class="pricing">
       <div class="container">
          <h2 class="text-uppercase">pricing</h2>
          <div class="row justify-content-between">
@@ -122,20 +129,22 @@
    <div class="double_block">
       <div class="container">
          <div class="row justify-content-between">
-            <div class="col-lg-6 testimonial"> 
+            <div class="col-lg-6 testimonial">
                <h2 class="text-uppercase">testimonial</h2>
-               <div class="container quote">                             
-                  <p class="test-text"><img src="./img/man.png" class="img-right img-round" alt="man">I have been involved with this comapny for ages and just want to say this is a great work by designcoon.</p>
-                  <p class="test-sign">DJ Bravo - Frequent Travelera</p>                          
+               <div class="container quote">
+                  <p class="test-text"><img src="./img/man.png" class="img-right img-round" alt="man">I have been
+                     involved with this comapny for ages and just want to say this is a great work by designcoon.</p>
+                  <p class="test-sign">DJ Bravo - Frequent Travelera</p>
                </div>
-               <div class="container quote grey">                             
-                  <p class="test-text"><img src="./img/boy.png" class="img-right img-round" alt="boy">I have been involved with this comapny for ages and just.</p> 
-                  <p class="test-sign">DJ Bravo - Frequent Travelera</p>     
+               <div class="container quote grey">
+                  <p class="test-text"><img src="./img/boy.png" class="img-right img-round" alt="boy">I have been
+                     involved with this comapny for ages and just.</p>
+                  <p class="test-sign">DJ Bravo - Frequent Travelera</p>
                </div>
             </div>
-            <div class="col-lg-6 gallery"  id="gallery"> 
+            <div class="col-lg-6 gallery" id="gallery">
                <h2 class="text-uppercase">gallery</h2>
-               <div class="container gallery-img">     
+               <div class="container gallery-img">
                   <div class="row">
                      <div class=" col-md-4 col-sm-6 photo">
                         <img class="img-round" src="./img/1.png" alt="">
@@ -155,7 +164,7 @@
                      <div class="col-md-4 col-sm-6 photo">
                         <img class="img-round" src="./img/6.png" alt="">
                      </div>
-                  </div>   
+                  </div>
                </div>
                <a class="gallery-link" href="#">VIEW MORE PICTURES</a>
             </div>
@@ -164,14 +173,12 @@
    </div>
    <button class="scroll_top"></button>
    <footer>
-      <div class="container">
-         <div class="row footer justify-content-between">
-            <p class="col-md-7 col-sm-6 footer_text">All Rights Reserved |  2016  |  Designed with love by <span> DesignCoon</span></p>               
-            <div class="col-md-4 col-sm-6 footer_logo">
-               <span>automotive</span>
-            </div>
+      <div class="footer">
+         <p class="footer_text">All Rights Reserved | 2016 | Designed with love by <span> DesignCoon</span></p>
+         <div class="footer_logo">
+            <span>automotive</span>
          </div>
-      </div>   
+      </div>
    </footer>
    <div class="contact">
       <div class="overlay">
@@ -187,7 +194,7 @@
             <input type="text" class="pop-item" name="country" placeholder="Country" required>
          </div>
          <div class="form-group form-checkbox">
-            <input class="form-check-input input-check" type="checkbox"  id="check" onchange="checkBox()">
+            <input class="form-check-input input-check" type="checkbox" id="check" onchange="checkBox()">
             <label class="form-check-label input-label" for="checkBox">
                I accept the terms & conditions
             </label>
@@ -196,8 +203,15 @@
       </form>
    </div>
    <script src="./script.js"></script>
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> 
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+   </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+   </script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+   </script>
 </body>
+
 </html>
