--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       <div class="container-fluid" id="home">
          <nav class="navbar navbar-expand-lg">
             <div class="container">
-               <a class="navbar-brand text-uppercase brand" href="#">automotive</a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
-                  aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-               </button>
+               <div class="small-menu">
+                  <a class="navbar-brand text-uppercase brand" href="#">automotive</a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+                     aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                  </button>
+               </div>
                <div class="collapse navbar-collapse" id="navbarContent">
                   <div class="navbar-nav ml-auto text-uppercase">
                      <a class="item active" href="#home">Home</a>
