--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                      <a class="item" href="#about">about</a>
                      <a class="item" href="#service">service</a>
                      <a class="item" href="#gallery">gallery</a>
-                     <a class="item" id="item-contact" href="#">contact</a>
+                     <a class="item-contact" id="item-contact" href="#">contact</a>
                   </div>
                </div>
             </div>
